<resources>
    <string name="app_name">Paynow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer">Transfer</string>
    <string name="narration">Narration</string>
    <string name="bank">Bank</string>
    <string name="account_number">Account Number</string>
    <string name="_continue">Continue</string>
    <string name="banks">Banks List</string>
    <string name="amount_ngn">Amount(NGN)</string>
    <string name="retry">Retry</string>
    <string name="transaction_details">Transaction Details</string>
</resources>