<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".transfer.presentation.TransferFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:text="@string/transfer"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_bg_rounded_corners"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:textColorHint="@color/hint"
            app:hintTextColor="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transfer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_tiet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:ellipsize="end"
                android:hint="@string/amount_ngn"
                android:inputType="number"
                android:maxLength="8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:theme="@style/Theme.PaynowEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/narration_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_bg_rounded_corners"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:textColorHint="@color/hint"
            app:hintTextColor="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/narration_tiet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:ellipsize="end"
                android:hint="@string/narration"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:theme="@style/Theme.PaynowEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_bg_rounded_corners"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:textColorHint="@color/hint"
            app:hintTextColor="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/narration_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bank_tiet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_down"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/bank"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:theme="@style/Theme.PaynowEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/bank_pb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/bank_til"
            app:layout_constraintEnd_toEndOf="@+id/bank_til"
            app:layout_constraintTop_toTopOf="@+id/bank_til" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edittext_bg_rounded_corners"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:textColorHint="@color/hint"
            app:hintTextColor="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_tiet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="@color/white"
                android:ellipsize="end"
                android:enabled="false"
                android:hint="@string/account_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                android:theme="@style/Theme.PaynowEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/account_number_pb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/account_til"
            app:layout_constraintEnd_toEndOf="@+id/account_til"
            app:layout_constraintTop_toTopOf="@+id/account_til" />

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/cyan"
            app:layout_constraintEnd_toEndOf="@+id/account_til"
            app:layout_constraintTop_toBottomOf="@+id/account_til" />


        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:text="@string/_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_name" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/cyan"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>